--- a/docs/src/layouts/Layout.astro
+++ b/docs/src/layouts/Layout.astro
@@ -5,10 +5,18 @@ import "../styles/global.css";
 interface Props {
   lang: string;
   title: string;
-  additionalCssHashes?: string;
+  additionalCspConnectSrc?: string;
+  additionalCspScriptSrc?: string;
+  trustedTypes?: string[];
 }
 
-const { lang, title, additionalCssHashes } = Astro.props;
+const {
+  lang,
+  title,
+  additionalCspConnectSrc,
+  additionalCspScriptSrc,
+  trustedTypes,
+} = Astro.props;
 const { BASE_URL } = import.meta.env;
 ---
 
@@ -24,18 +32,20 @@ const { BASE_URL } = import.meta.env;
           content={[
             `default-src 'self';`,
 
-            `connect-src 'self' https://cloudflareinsights.com;`,
-            `script-src 'self' https://static.cloudflareinsights.com;`,
-            `style-src 'self'${additionalCssHashes ?? ""};`,
+            `connect-src 'self' https://cloudflareinsights.com${additionalCspConnectSrc ?? ""};`,
+            `img-src 'self' data: https://github.com/kaito-tokyo/live-backgroundremoval-lite/actions/workflows/daily-website-security-check.yaml/badge.svg;`,
+            `script-src 'self' https://static.cloudflareinsights.com${additionalCspScriptSrc ?? ""};`,
+            `style-src 'self';`,
+
+            `require-trusted-types-for 'script';`,
+            `trusted-types${trustedTypes && Array.isArray(trustedTypes) && trustedTypes.length > 0 ? " " + trustedTypes.join(" ") : ""};`,
 
             `base-uri 'none';`,
             `font-src 'self';`,
             `form-action 'self';`,
             `frame-src 'none';`,
-            `img-src 'self' data: https://github.com/kaito-tokyo/live-backgroundremoval-lite/actions/workflows/daily-website-security-check.yaml/badge.svg;`,
             `manifest-src 'self';`,
             `object-src 'none';`,
-            `require-trusted-types-for 'script';`,
             `upgrade-insecure-requests;`,
             `worker-src 'self';`,
           ].join(" ")}
@@ -77,28 +87,23 @@ const { BASE_URL } = import.meta.env;
     <div>
       <slot />
       <footer>
-        <p>&copy; 2025 Kaito Udagawa</p>
-        <p id="daily-website-security-check">
+        <div>
           <a
             href="https://github.com/kaito-tokyo/live-backgroundremoval-lite/actions/workflows/daily-website-security-check.yaml"
             target="_blank"
             rel="noopener noreferrer"
-          >
-            <img
+            ><img
               src="https://github.com/kaito-tokyo/live-backgroundremoval-lite/actions/workflows/daily-website-security-check.yaml/badge.svg"
               alt="Daily Website Security Check"
-            />
-          </a>
-        </p>
-        <p>
+            /></a
+          >
           <a
             href={joinURL(BASE_URL, "llms.txt")}
             target="_blank"
-            rel="noopener noreferrer"
+            rel="noopener noreferrer">llms.txt</a
           >
-            llms.txt
-          </a>
-        </p>
+        </div>
+        <div>&copy; 2025 Kaito Udagawa</div>
       </footer>
     </div>
 
@@ -116,26 +121,23 @@ const { BASE_URL } = import.meta.env;
 <style is:global>
   body {
     background-color: var(--color-bg);
-    display: flex;
-    justify-content: center;
-    align-items: center;
     min-height: 100vh;
     margin: 0;
   }
 
   footer {
+    margin: auto;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     align-items: center;
-    color: white;
-    gap: 0.3rem;
   }
 
+  footer,
   footer a {
-    color: white;
+    color: #ccc;
   }
 
-  p img {
+  footer img {
     vertical-align: middle;
   }
 </style>
