--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -187,7 +187,7 @@ const structuredData = {
 
     <section id="ask-anything">
       <a
-        href={joinURL(BASE_URL, "ask-anything")}
+        href={withTrailingSlash(joinURL(BASE_URL, "ask-anything"))}
         class="ask-anything-button"
       >
         <svg
