--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -273,6 +273,13 @@ const structuredData = {
         </li>
         <li>
           <a
+            href={withTrailingSlash(joinURL(BASE_URL, "site-verification"))}
+            title="Site Verification using Provenance and Attestation"
+            >Site Verification Guide</a
+          >
+        </li>
+        <li>
+          <a
             href={withTrailingSlash(GITHUB_URL)}
             target="_blank"
             rel="noopener noreferrer">GitHub Repository</a
