Add Fedora instructions and links to docs
Added Fedora to the list of unsupported platforms in the main and versioned documentation pages, including links to the Fedora-specific instructions. Updated the Fedora README with clearer build and installation steps, improved formatting, and clarified manual build requirements.

--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -159,17 +159,20 @@ const structuredData = {
         <li>
           <a
             href="https://github.com/kaito-tokyo/live-backgroundremoval-lite/tree/main/unsupported/arch"
+            >Arch Linux</a
           >
-            Arch Linux
-          </a>
         </li>
-
         <li>
           <a
             href="https://github.com/kaito-tokyo/live-backgroundremoval-lite/tree/main/unsupported/flatpak"
+            >Flatpak</a
           >
-            Flatpak
-          </a>
+        </li>
+        <li>
+          <a
+            href="https://github.com/kaito-tokyo/live-backgroundremoval-lite/tree/main/unsupported/fedora"
+            >Fedora</a
+          >
         </li>
       </ul>
 
