--- a/docs/src/pages/versions/[version].astro
+++ b/docs/src/pages/versions/[version].astro
@@ -252,17 +252,20 @@ const schemaData = {
           <li>
             <a
               href="https://github.com/kaito-tokyo/live-backgroundremoval-lite/tree/main/unsupported/arch"
+              >Arch Linux (Latest)</a
             >
-              Arch Linux (Latest)
-            </a>
           </li>
-
           <li>
             <a
               href="https://github.com/kaito-tokyo/live-backgroundremoval-lite/tree/main/unsupported/flatpak"
+              >Flatpak (Latest)</a
             >
-              Flatpak (Latest)
-            </a>
+          </li>
+          <li>
+            <a
+              href="https://github.com/kaito-tokyo/live-backgroundremoval-lite/tree/main/unsupported/fedora"
+              >Fedora (Latest)</a
+            >
           </li>
         </ul>
       </section>
