--- a/docs/src/layouts/Layout.astro
+++ b/docs/src/layouts/Layout.astro
@@ -24,6 +24,7 @@ const {
 const isValidSha = GITHUB_SHA && GITHUB_SHA.trim() !== "";
 const revision = isValidSha ? GITHUB_SHA : "undefined";
 const shortRevision = isValidSha ? GITHUB_SHA.substring(0, 7) : "undefined";
+const runId = GITHUB_RUN_ID ?? "undefined";
 ---
 
 <!doctype html>
