Add Korean localization files and update resources
Added Korean translation files (ko-KR.ini, ko_KR.ts, ko_KR.qm) for the Live Background Removal Lite plugin. Updated resources.qrc to include the new ko_KR.qm file, enabling Korean language support.

--- a/src/resources/resources.qrc
+++ b/src/resources/resources.qrc
@@ -1,6 +1,7 @@
 <RCC>
   <qresource prefix="/live-backgroundremoval-lite">
     <file>ja_JP.qm</file>
+    <file>ko_KR.qm</file>
     <file>logo-512.png</file>
   </qresource>
 </RCC>
