--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -106,8 +106,9 @@ const structuredData = {
     <meta name="description" content={structuredData.description} />
     <link
       rel="canonical"
-      href={withTrailingSlash(joinURL(PRODUCTION_BASE_URL, lang.toLowerCase()))}
+      href={withTrailingSlash(joinURL(PRODUCTION_BASE_URL))}
     />
+    <link rel="alternate" hreflang="x-default" href={withTrailingSlash(BASE_URL)} />
     {
       i18nLangs.map((linkLang) => (
         <link
