Update alternate link URLs to use PRODUCTION_BASE_URL
Replaces usage of baseUrl with PRODUCTION_BASE_URL for alternate hreflang links in HomePage.astro to ensure correct canonical URLs. Also removes unused PRODUCTION_BASE_URL import from [lang]/index.astro.

--- a/docs/src/components/HomePage.astro
+++ b/docs/src/components/HomePage.astro
@@ -132,14 +132,14 @@ const structuredData = {
     <link
       rel="alternate"
       hreflang="x-default"
-      href={withTrailingSlash(baseUrl)}
+      href={withTrailingSlash(PRODUCTION_BASE_URL)}
     />
     {
       i18nLangs.map((l) => (
         <link
           rel="alternate"
           hreflang={l}
-          href={withTrailingSlash(joinURL(baseUrl, l))}
+          href={withTrailingSlash(joinURL(PRODUCTION_BASE_URL, l))}
         />
       ))
     }
